Add choice of tools for the Jupyter Notebook

--- a/OpenStreeMap.ipynb
+++ b/OpenStreeMap.ipynb
@@ -17,6 +17,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Choice of tools\n",
+    "\n",
+    "For this project I opted for:\n",
+    "\n",
+    "* Keep basic documentation and notes in the Jupyter Notebook\n",
+    "* Save files in Github\n",
+    "* Use PyCharm as Python environment\n",
+    "* Use DB Browser for SQLite as SQL environment (in combination with command line)\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
