Add Map choice to Jupyter Notebook

--- a/OpenStreeMap.ipynb
+++ b/OpenStreeMap.ipynb
@@ -32,6 +32,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Map Area\n",
+    "\n",
+    "Nieuwegein, Netherlands:\n",
+    "\n",
+    "* Mapzen extract: https://mapzen.com/data/metro-extracts/your-extracts/2ac3c83d0cf8\n",
+    "* OpenStreetMap link: https://www.openstreetmap.org/relation/419212#map=12/52.0300/5.0966\n",
+    "\n",
+    "I chose this area since this is where I currently live, and not a major city in the Netherlands. Therefore I believe I can collaborate better here due to my knowledge and have a marginal higher impact than to a major city like Amsterdam.\n",
+    "\n",
+    " *I downloaded the OSM XML option: https://s3.amazonaws.com/mapzen.odes/ex_4nypWySr8p3tPS5D3gfvy2aPey7mV.osm.bz2*\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
