Correct for postal_code

--- a/OpenStreeMap.ipynb
+++ b/OpenStreeMap.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "** Start Date **: 04/Mar/2017\n",
     "\n",
-    "** Today's Date **: 04/Mar/2017"
+    "** Today's Date **: 28/Apr/2017"
    ]
   },
   {
@@ -45,6 +45,58 @@
     "I chose this area since this is where I currently live, and not a major city in the Netherlands. Therefore I believe I can collaborate better here due to my knowledge and have a marginal higher impact than to a major city like Amsterdam.\n",
     "\n",
     " *I downloaded the OSM XML option: https://s3.amazonaws.com/mapzen.odes/ex_4nypWySr8p3tPS5D3gfvy2aPey7mV.osm.bz2*\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## Initial exploration\n",
+    "\n",
+    "After loading a small sample of the data (taking every 10th entry in the full data), I explored the database.\n",
+    "\n",
+    "I noticed the (initial) issues:\n",
+    "\n",
+    "* Many unique keys: for example, *postal_code* and _postcode_ should be combined\n",
+    "* Post codes where not uniform (for example \"3431 LN\" and \"3523ED\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Many unique keys\n",
+    "\n",
+    "I ran the following query:"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "select  key, count(*) as count \n",
+    "from ways_tags\n",
+    "group by key\n",
+    "order by count"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This returned 134 unique rows, which I found suspiciously high. I did not investigate all details, but I did compare the top returning with the lower returning keys. Here I noticed, for example, that *postal_code* appeared with count 2, as opposed to *postcode* with count 5614. Therefore I decided to merge those in the python import code:"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "## correct for postal_code:\n",
+    "if potential_key == \"postal_code\":\n",
+    "    potential_key == \"postcode\"\n",
+    "    potential_type == \"addr\""
    ]
   },
   {
