Update treatment issue 3 in notebook

--- a/OpenStreeMap.ipynb
+++ b/OpenStreeMap.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "** Start Date **: 04/Mar/2017\n",
     "\n",
-    "** Today's Date **: 28/Apr/2017"
+    "** Today's Date **: 09/May/2017"
    ]
   },
   {
@@ -60,16 +60,18 @@
     "\n",
     "I noticed the (initial) issues:\n",
     "\n",
-    "* Many unique keys: for example, *postal_code* and _postcode_ should be combined\n",
-    "* Post codes where not uniform (for example \"3431 LN\" and \"3523ED\")"
+    "* **ISSUE 1**: Many unique keys: for example, *postal_code* and _postcode_ should be combined\n",
+    "* **ISSUE 2**: Post codes where not uniform (for example \"3431 LN\" and \"3523ED\")\n",
+    "* **ISSUE 3**: Phone numbers where not uniform"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Many unique keys\n",
+    "###  **ISSUE 1**: Many unique keys\n",
     "\n",
+    "#### Problem\n",
     "I ran the following query:"
    ]
   },
@@ -78,7 +80,7 @@
    "metadata": {},
    "source": [
     "select  key, count(*) as count \n",
-    "from ways_tags\n",
+    "from nodes_tags\n",
     "group by key\n",
     "order by count"
    ]
@@ -87,7 +89,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This returned 134 unique rows, which I found suspiciously high. I did not investigate all details, but I did compare the top returning with the lower returning keys. Here I noticed, for example, that *postal_code* appeared with count 2, as opposed to *postcode* with count 5614. Therefore I decided to merge those in the python import code:"
+    "This returned 134 unique rows, which I found suspiciously high. I did not investigate all details, but I did compare the top returning with the lower returning keys. Here I noticed, for example, that *postal_code* appeared with count 2, as opposed to *postcode* with count 5614.\n",
+    "\n",
+    "#### Solution\n",
+    "I decided to merge postal_coe and postcode in the python import code:"
    ]
   },
   {
@@ -104,13 +109,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Clean Postcodes\n",
+    "###  **ISSUE 2**: Postcodes incomplete and not uniform\n",
     "\n",
+    "#### Problem\n",
     "Browsing through the data revealed 2 problems with postcodes:\n",
     "* Not uniform on the white space between 4 numbers and letters\n",
     "* Incomplete postcodes having only 4 numbers\n",
     "\n",
-    "To solve this, I first removed any whites spaces by adding the codes into the python db_prep.py code:"
+    "This can be seen in the following excerpt:"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "### examine postcodes:\n",
+    "select value from nodes_tags where key = \"postcode\" limit 10"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "| value   |\n",
+    "|---------|\n",
+    "| 3432    |\n",
+    "| 3438    |\n",
+    "| 3437 PJ |\n",
+    "| 3433 ZB |\n",
+    "| 3431 LN |\n",
+    "| 3523ED  |\n",
+    "| 3523EJ  |\n",
+    "| 3523ED  |\n",
+    "| 3522HR  |\n",
+    "| 3438AA  |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Solution\n",
+    "The solution was implemented in 2 parts.\n",
+    "\n",
+    "##### Part 1\n",
+    "First removed any whites spaces by adding the codes into the python db_prep.py code:"
    ]
   },
   {
@@ -137,6 +180,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "##### Part 2\n",
     "To improve the postcodes with 4 digits only, I decided to use the information in the database to improve itself.\n",
     "\n",
     "The approach was to find the closest node point with full postcode that started with the same 4 letters and use that full postcode as replacement.\n",
@@ -157,13 +201,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "| problem_postcode | key      | lat        | lon       |\n",
+    "|------------------|----------|------------|-----------|\n",
+    "| 3432             | postcode | 52.0101421 | 5.0832539 |\n",
+    "| 3438             | postcode | 52.0452865 | 5.101346  |\n",
+    "| 3439             | postcode | 52.0398723 | 5.1011803 |"
+   ]
+  },
+  {
    "cell_type": "raw",
    "metadata": {},
    "source": [
     "## Find the Matching postcodes\n",
     "select substr(value,1,4) as match_postcode, value as full_postcode, key, lat, lon\n",
     "from nodes_tags join nodes using(id)\n",
-    "where key = \"postcode\" and length(value)>4) "
+    "where key = \"postcode\" and length(value)>4\n",
+    "limit 10"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "| match_postcode | full_postcode | key      | lat        | lon       |\n",
+    "|----------------|---------------|----------|------------|-----------|\n",
+    "| 3437           | 3437PJ        | postcode | 52.0601311 | 5.0773771 |\n",
+    "| 3433           | 3433ZB        | postcode | 52.0040012 | 5.0958811 |\n",
+    "| 3431           | 3431LN        | postcode | 52.0281712 | 5.0807074 |\n",
+    "| 3523           | 3523ED        | postcode | 52.0721184 | 5.1245909 |\n",
+    "| 3523           | 3523EJ        | postcode | 52.072329  | 5.123319  |\n",
+    "| 3523           | 3523ED        | postcode | 52.0721409 | 5.1244553 |\n",
+    "| 3522           | 3522HR        | postcode | 52.0662376 | 5.114512  |\n",
+    "| 3438           | 3438AA        | postcode | 52.0377198 | 5.0928945 |\n",
+    "| 3526           | 3526KV        | postcode | 52.0616652 | 5.1101707 |\n",
+    "| 3431           | 3431HC        | postcode | 52.0276385 | 5.0827466 |"
    ]
   },
   {
@@ -198,7 +272,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This was fed into the python create_db code"
+    "| id         | problem_postcode | full_postcode | min(distance)        |\n",
+    "|------------|------------------|---------------|----------------------|\n",
+    "| 44844351   | 3432             | 3432ND        | 5.33922370001306e-07 |\n",
+    "| 45003711   | 3438             | 3438AM        | 8.83898600042912e-08 |\n",
+    "| 4352876693 | 3439             | 3439NK        | 1.35280450000897e-07 |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This was fed into the python create_db code,updating the problem postcode with the closest match"
    ]
   },
   {
@@ -216,6 +301,118 @@
     "\n",
     "    db.execute(sql)\n",
     "    db.commit()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###  **ISSUE 3**: Phone numbers not uniform\n",
+    "\n",
+    "#### Problem\n",
+    "I ran the following query:"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "select value from nodes_tags where key = \"phone\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "| value             |\n",
+    "|-------------------|\n",
+    "| 030-6041144       |\n",
+    "| +31 (0)30 63 80   |\n",
+    "| 030-6056479       |\n",
+    "| +31-30-2804145    |\n",
+    "| +31-30-6006339    |\n",
+    "| +31302803890      |\n",
+    "| +31-30-6090821    |\n",
+    "| +31 (0) 302887760 |"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The above excerpt reveals that there are the following inconsistencies in the way phone numbers are inserted:\n",
+    "* Inclusion or absence of the Dutch international code (+31)\n",
+    "* Spacing in between the numbers\n",
+    "* Use or not of hyphen \"-\" to separate regional code\n",
+    "* Insertion or not of (0) which is a version for local calling"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Solution\n",
+    "\n",
+    "I decided to reshape all phone numbers in the mask: +31 YY XXX XXXX, where:\n",
+    "* +31 is the Dutch international code\n",
+    "* YY is the regional code, which in this case will be typically 30\n",
+    "* XXX XXXX is the phone number, a combination of 3 + 4 numerical characters\n",
+    "* space is used for readability\n",
+    "\n",
+    "This implemented by creating the auxiliar following python code into the db_prep.py:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def improve_phonenumbers(phonenumber):\n",
+    "    # remove all special chars:\n",
+    "    print phonenumber\n",
+    "    clean_number = phonenumber\n",
+    "    # remove (0)\n",
+    "    clean_number =  clean_number.replace(\"(0)\",\"\")\n",
+    "    # remove all non digits\n",
+    "    clean_number = re.sub(r'\\D', \"\", clean_number)\n",
+    "\n",
+    "    if len(clean_number) == 11:\n",
+    "        # full phone number\n",
+    "        formatted_number =  '+{0} {1} {2}-{3}'.format(clean_number[0:2], clean_number[2:4], clean_number[4:7], clean_number[7:])\n",
+    "    elif len(clean_number) == 10:\n",
+    "        # partial phone number, no international code, starting with 0\n",
+    "        formatted_number =  '+31 {0} {1}-{2}'.format(clean_number[1:3], clean_number[3:6], clean_number[6:])\n",
+    "    else:\n",
+    "        # invalid number\n",
+    "        formatted_number = \"\"\n",
+    "\n",
+    "    return formatted_number\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After the code, the same query returned"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "| value             |\n",
+    "|-------------------|\n",
+    "| +31 30 604-1144 |\n",
+    "| _NULL_                  |\n",
+    "| +31 30 605-6479 |\n",
+    "| +31 30 280-4145 |\n",
+    "| +31 30 600-6339 |\n",
+    "| +31 30 280-3890 |\n",
+    "| +31 30 609-0821 |\n",
+    "| +31 30 288-7760 |"
    ]
   },
   {
