--- a/OpenStreeMap.ipynb
+++ b/OpenStreeMap.ipynb
@@ -92,7 +92,7 @@
     "This returned 134 unique rows, which I found suspiciously high. I did not investigate all details, but I did compare the top returning with the lower returning keys. Here I noticed, for example, that *postal_code* appeared with count 2, as opposed to *postcode* with count 5614.\n",
     "\n",
     "#### Solution\n",
-    "I decided to merge postal_coe and postcode in the python import code:"
+    "I decided to merge postal_code and postcode in the python import code:"
    ]
   },
   {
@@ -283,7 +283,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This was fed into the python create_db code,updating the problem postcode with the closest match"
+    "This was fed into the python create_db code, updating the problem postcode with the closest match"
    ]
   },
   {
@@ -344,7 +344,7 @@
     "* Inclusion or absence of the Dutch international code (+31)\n",
     "* Spacing in between the numbers\n",
     "* Use or not of hyphen \"-\" to separate regional code\n",
-    "* Insertion or not of (0) which is a version for local calling"
+    "* Insertion or not of (0), which is a version for local calling"
    ]
   },
   {
@@ -364,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -652,16 +652,56 @@
    "source": [
     "# Other ideas:\n",
     "\n",
-    "* Further improvement can be done by cross check externally the postcodes\n",
-    "* Certain tags could be re-written to a more intuitively format. For example these tags refer to a cell tower:\n",
-    "\t\t<tag k=\"height\" v=\"21\" />\n",
+    "## Idea 1:\n",
+    "Further improvement can be done by cross checking externally the postcodes. Since all nodes have lat and lon values, this can be used to search on a mapping of postcodes to enrich this dataset\n",
+    "\n",
+    "### Benefits:\n",
+    "The most direct benefit is the completeness of the database.\n",
+    "\n",
+    "Another benefit is the avoidance of user input postcodes, which are error prone. \n",
+    "\n",
+    "### Antecipated Issues:\n",
+    "Using an external database has also its challenges. A user populated database will also suffer from user errors. A commercial database will have costs and are not necessarily error free. \n",
+    "\n",
+    "Moreover, it will require the technicall programming of the matching, which shall also cost some time.\n",
+    "\n",
+    "\n",
+    "## Idea 2:\n",
+    "\n",
+    "Certain tags could be re-written to a more intuitively format. For example these tags refer to a cell tower:\n",
+    "\t\t\n",
+    "        <tag k=\"height\" v=\"21\" />\n",
     "\t\t<tag k=\"man_made\" v=\"tower\" />\n",
     "\t\t<tag k=\"technology\" v=\"UMTS\" />\n",
     "\t\t<tag k=\"tower:type\" v=\"communication\" />\n",
     "        \n",
-    "    It would be clearer to have all these 4 entries with a tag type of tower, instead of 'regular' and just one as 'tower', and the values as in there\n",
+    "It would be clearer to have all these 4 entries with a tag type of tower, instead of 'regular' and just one as 'tower', and the values as in there.\n",
     "\n",
-    "      "
+    "### Benefits:\n",
+    "The main benefit is the improving of the search options. If the type is set as 'tower', it is much straight forward to query for heights, tower type, etc.\n",
+    "\n",
+    "Another benefit is that one of the tags would become redundant and could be removed, reducing the size of the database.\n",
+    "\n",
+    "\n",
+    "### Antecipated Issues: \n",
+    "A potential problem that would emerge is the potential lack of uniformity across different tower types entered in the database. \n",
+    "\n",
+    "Moreover, if other queries had already been built with the current data structure, they would not work anymore. Therefore, if I would not be able to control those, changes in the structure would create negative impacts. \n",
+    "\n",
+    "## Idea 3:\n",
+    "Include bicycle path data.\n",
+    "\n",
+    "In the Netherlands, the bike network is massive, including bikepaths, knot points and routes. Data from Openstreemap is already used by the Open Fiets Project (Fiets means bike in Dutch). This can be seen here: http://www.openfietsmap.nl/\n",
+    "\n",
+    "Data from either this project or other bicyle routes source could be incorporated into the Open Street Map data.\n",
+    "\n",
+    "### Benefits:\n",
+    "The direct benefit is the richness of information added to the dataset. This would be a huge benefit to the bikers using Open Street Map Data. \n",
+    "\n",
+    "A second benefit is the cross-usabilty of user data, increasing the value of open source data.\n",
+    "\n",
+    "### Antecipated Issues: \n",
+    "Using another source of data is also not without its challenges. Auditing and cleaning would be required, and the technicall importing is also not necessarily trivial."
    ]
   },
   {
